testsuite/poke.pkl/computed-diag-3.pk
/* { dg-do compile } */

/* Constraints are not allowed in computed fields.  */

type Foo =
  struct
  {
    int i;
    computed int j : j != 10; /* { dg-error "" } */
  };
